--- a/docker_compose/test-rails2/Dockerfile
+++ b/docker_compose/test-rails2/Dockerfile
@@ -1,16 +1,18 @@
-FROM ruby:2.5.3
-
-RUN apt-get update -qq && \
-    apt-get install -y build-essential \
-                       libpq-dev \       
-                       nodejs            
-
-RUN mkdir /rails2 
-WORKDIR /rails2
-
-ADD ./Gemfile $APP_DIR/Gemfile
-ADD ./Gemfile.lock /rails2/Gemfile.lock
-
+FROM ruby:2.5
+RUN apt-get update -qq && apt-get install -y nodejs postgresql-client
+RUN mkdir /myapp
+WORKDIR /myapp
+COPY Gemfile /myapp/Gemfile
+COPY Gemfile.lock /myapp/Gemfile.lock
 RUN bundle install
-ADD . /rails2
+COPY . /myapp
+
+# Add a script to be executed every time the container starts.
+COPY entrypoint.sh /usr/bin/
+RUN chmod +x /usr/bin/entrypoint.sh
+ENTRYPOINT ["entrypoint.sh"]
+EXPOSE 3000
+
+# Start the main process.
+CMD ["rails", "server", "-b", "0.0.0.0"]
 
