--- a/docker_compose/test-rails2/docker-compose.yml
+++ b/docker_compose/test-rails2/docker-compose.yml
@@ -2,9 +2,11 @@ version: '3'
 services:
   db:
     image: postgres
+    volumes:
+      - ./tmp/db:/var/lib/postgresql/data
   web:
     build: .
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/myapp
     ports:
